# kubot_description

./: README.md  package.xml
kubot_description/: package.xml
kubot_description/launch/: model.launch
kubot_description/meshes/camera_frame/d435i/: camera_link.stl
kubot_description/meshes/camera_frame/logi-c615/: camera_link.stl
kubot_description/meshes/lidar_frame/rplidar-a2/: laser_link.stl
kubot_description/meshes/robot_frame/aider/: base_link.stl  r1_frame.stl
kubot_description/meshes/robot_frame/neuronbot2/: base_link.stl  r1_frame.stl
kubot_description/meshes/robot_frame/wagv/: logo_frame.stl  r1_frame.stl
kubot_description/rviz/: rviz_gazebo.rviz
kubot_description/urdf/: kubot.urdf.xacro  kubot.xacro  kubot_properties.urdf.xacro
kubot_description/urdf/camera_xacro/: d435i.urdf.xacro  logi-c615.urdf.xacro  non-camera.urdf.xacro
kubot_description/urdf/lidar_xacro/: non-lidar.urdf.xacro  rplidar-a3.urdf.xacro  sick-tim551.urdf.xacro  two-rplidar-a2.urdf.xacro
kubot_description/urdf/model_xacro/: aider.urdf.xacro  neuronbot2.urdf.xacro  s2_4wd_diff.urdf.xacro  s3_4wd_omni.urdf.xacro  s5_4wd_mecanum.urdf.xacro  wagv.urdf.xacro
launch/: model.launch  view_model.launch
meshes/camera_frame/non-3dsensor/: camera_link.stl
meshes/lidar_frame/sick-tim551/: laser_link.stl
meshes/robot_frame/aider/: r2_frame.stl  wheel_link.stl
meshes/robot_frame/kubot2/: logo_frame.stl  r1_frame.stl  wheel_link.stl
urdf/: kubot.urdf.xacro  kubot.xacro
urdf/camera_xacro/: logi-c615.urdf.xacro
urdf/lidar_xacro/: rplidar-a1.urdf.xacro  rplidar-a2.urdf.xacro
(+4 files in other folders)
