<?xml version="1.0"?>
<package format="2">
	<name>kubot_description</name>
	<version>1.6.2</version>
	<description>
		KUBOT Robots' description TF, urdf, xacro and RViZ package.
	</description>
	<maintainer email="YunHong.Wang@ShanYangYe.com">Yun Hong</maintainer>

	<license>Apache 2.0</license>

	<!-- KUBOT ROS  -->
	<author>KUBOT</author>
	<author email="t105408001@ntut.org.tw">Yun Hong</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>urdf</depend>
	<depend>robot_state_publisher</depend>
	<depend>tf2</depend>
	<depend>xacro</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
